added jinja templates

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,6 +10,12 @@
     <h1>hello from index.html</h1>
 
     <div>
+      <a href="/train">
+        <button id="btn-start">start</button>
+      </a>
+    </div>
+
+    <div>
       <ul id="ul-snake-data">
       </ul>
     </div>
@@ -23,30 +29,8 @@
       <button id="join-btn">connect</button>
     </div>
 
+    <script type="text/javascript" src="{{ url_for('static', filename='socket.js') }}"></script>
   </body>
-  <script>
-    const socket = io({autoConnect: false});
-    document.getElementById("join-btn").addEventListener("click", function() {
-      let username = document.getElementById("username").value;
-      socket.connect();
-
-      socket.on("connect", function() {
-        socket.emit("user_join", username);
-      })
-    })
-
-    document.getElementById("btn-train").addEventListener("click", function(){
-      socket.emit("train");
-    })
-
-    socket.on("snake_data", function(data){
-      let ul = document.getElementById("ul-snake-data");
-      let li = document.createElement("li")
-      li.appendChild(document.createTextNode(data["data"]["snake"][0]["x"]));
-      ul.appendChild(li)
-      ul.scrollTop = ul.scrollHeight;
-    })
-
-  </script>
+  
 
 </html>
