--- a/website/templates/snake.html
+++ b/website/templates/snake.html
@@ -23,6 +23,6 @@
       </form>
     </div>
 
-    <script src="{{url_for('static', filename='index.js')}}"></script>
+    <script src="{{url_for('static', filename='snake.js')}}"></script>
   </body>
 </html>
