--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}
-    Sign In
+    Log In
 {% endblock %}
 
 {% block container %}
     <form method="POST">
-        <h3 align="center">sign in</h3>
+        <h3 align="center">log in</h3>
         <div class="form-group">
             <label for="first-name">first name</label>
             <input 
