--- a/website/templates/snake.html
+++ b/website/templates/snake.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css')}}"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="gameContainer">
@@ -17,10 +18,18 @@
       <button id="resetBtn">Reset</button>
     </div>
 
-    <div id="train">
-      <form action="/train" method="POST">
-        <input type="submit" value="train" />
-      </form>
+    <div>
+      <ul id="ul-snake-data">
+      </ul>
+    </div>
+
+    <div>
+      <button id="btn-train">train</button>
+    </div>
+
+    <div>
+      <input type="text" id="username" placeholder="username">
+      <button id="join-btn">connect</button>
     </div>
 
     <script src="{{url_for('static', filename='snake.js')}}"></script>
