--- a/website/templates/snake.html
+++ b/website/templates/snake.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="gameContainer">
-      <canvas id="gameBoard" width="500" height="500"></canvas>
+      <canvas id="gameBoard" width="640" height="480"></canvas>
       <div id="scoreText">0</div>
       <button id="resetBtn">Reset</button>
     </div>
@@ -32,6 +32,6 @@
       <button id="join-btn">connect</button>
     </div>
 
-    <script src="{{url_for('static', filename='snake.js')}}"></script>
+    <script src="{{url_for('static', filename='new_snake.js')}}"></script>
   </body>
 </html>
