--- a/website/templates/snake.html
+++ b/website/templates/snake.html
@@ -32,6 +32,6 @@
       <button id="join-btn">connect</button>
     </div>
 
-    <script src="{{url_for('static', filename='new_snake.js')}}"></script>
+    <script src="{{url_for('static', filename='snakeai.js')}}"></script>
   </body>
 </html>
