--- a/website/templates/snake.html
+++ b/website/templates/snake.html
@@ -24,6 +24,9 @@
     </div>
 
     <div>
+      <input type="text" id="food" placeholder="food">
+      <input type="text" id="alive" placeholder="alive">
+      <input type="text" id="die" placeholder="die">
       <button id="btn-train">train</button>
     </div>
 
