--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -4,29 +4,33 @@
 {% endblock %}
 
 {% block container %}
-    <form method="POST">
-        <h3 align="center">sign in</h3>
-        <div class="form-group">
-            <label for="first-name">first name</label>
-            <input 
-                type="text" 
-                class="form-control"
-                name="first-name"
-                id="first-name"
-                placeholder="enter first name"
-            >
+    <div class="mx-auto mt-5" style="width: 400px;">
+        <form method="POST">
+            <h3 align="center">sign in</h3>
+            <br>
+            <div class="form-group">
+                <input 
+                    type="text" 
+                    class="form-control"
+                    name="first-name"
+                    id="first-name"
+                    placeholder="enter first name"
+                >
+            </div>
+            <br>
+            <div class="form-group">
+                <input 
+                    type="text" 
+                    class="form-control"
+                    name="grade-level"
+                    id="grade-level"
+                    placeholder="enter grade level"
+                >
+            </div>
+            <br>
+            <div align="center">
+            <button type="submit" class="btn btn-primary" id="button">let's go</button>
         </div>
-        <div class="form-group">
-            <label for="grade-level">grade level</label>
-            <input 
-                type="text" 
-                class="form-control"
-                name="grade-level"
-                id="grade-level"
-                placeholder="enter grade level"
-            >
-        </div>
-        <br>
-        <button type="submit" class="btn btn-primary">let's go</button>
-    </form>
+        </form>
+    </div>
 {% endblock %}
