added chick page

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -41,6 +41,9 @@
             background-color: #47ffa3;
             border-color: #47ffa3;
         }
+        p{
+            font-size: 20px
+        }
     </style>
 
     <title>{% block title %}Base{% endblock %}</title>
