--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block container %}
+    <div class="mt-5" style="width: 400px; height:40px"></div>
     <div class="mx-auto mt-5" style="width: 400px;">
         <h1 class="text-center title">Train your AI</h1>
         <h2 class="text-center">with reinforcment learing</h2>
