--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,32 +19,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <style>
-        body{
-            font-family: 'Quicksand', sans-serif;
-            background-color: #2b2c3f;
-        }
-        h1, h2, h3, h4, p, span {
-            color: white;
-        }
-        .title {
-            font-size: 60px;
-        }
-        a {
-            color: #9cffcd;
-            font-size: 20px
-        }
-        a:hover {
-            color: #9cffcd;
-        }
-        #button{
-            background-color: #47ffa3;
-            border-color: #47ffa3;
-        }
-        p{
-            font-size: 20px
-        }
-    </style>
+
+    <link
+    rel="stylesheet"
+    href="{{ url_for('static', filename='base.css')}}"
+    />
+
+    {% block head %}
+    {% endblock %}
 
     <title>{% block title %}Base{% endblock %}</title>
 
