--- a/website/templates/intro.html
+++ b/website/templates/intro.html
@@ -20,7 +20,7 @@
             be training your AI to play the game snake.</p>.
         </p>
         <div class="mx-auto mt-1" style="width: 102px;">
-            <a href="/snake">get started</a>
+            <a href="/snakeai">get started</a>
         </div>
     </div>
 {% endblock %}
