--- a/website/templates/intro.html
+++ b/website/templates/intro.html
@@ -17,7 +17,8 @@
             misbehaves, it won't misbehaves as often. Think of
             training your AI like this. This method is called 
             <strong>reinforcment learning</strong>. You will
-            be training your AI to play the game snake.</p>.
+            be training your AI to play the game snake.
+            But first... play the snake game yourself!</p>.
         </p>
         <div class="mx-auto mt-1" style="width: 102px;">
             <a href="/snake">get started</a>
