--- a/website/templates/snakeai.html
+++ b/website/templates/snakeai.html
@@ -98,8 +98,13 @@
           <br>
           <br>
           <br>
-          <br>
-          <br>
+          
+          <div class="row"> 
+            <div style="width: 140px;">
+              <p class="text-left">games</p>
+            </div>
+            <p id="games">0/100</p>
+          </div>
 
           <div class="row"> 
             <div style="width: 140px;">
@@ -117,7 +122,7 @@
 
           <div class="row"> 
             <div style="width: 140px;">
-              <p class="text-left">goal</p>
+              <p class="text-left">goal(try to beat this)</p>
             </div>
             <p id="goal">80</p>
           </div>
