--- a/website/templates/snakeai.html
+++ b/website/templates/snakeai.html
@@ -54,6 +54,10 @@
       <div style="width: 240px;"></div>
       <button style="width: 240px;" class="btn btn-primary" id="btn-train">train and see results</button>
     </div>  
+
+    <button style="width: 240px;" class="btn btn-primary" id="btn-off">stop training</button>
+
+
   </div>
 
     
