--- a/website/static/base.css
+++ b/website/static/base.css
@@ -27,7 +27,8 @@ a:hover {
 }
 
 #button,
-#resetBtn {
+#resetBtn,
+#btn-off {
     background-color: #47ffa3;
     border-color: #47ffa3;
     color: #2b2c3f;
