--- a/website/templates/snakeai.html
+++ b/website/templates/snakeai.html
@@ -50,14 +50,14 @@
     </h5>
     <br>
 
-    <div align="center">
-      <div style="width: 240px;"></div>
+    <div style="width: 240px; display: inline;" align="center">
       <button style="width: 240px;" class="btn btn-primary" id="btn-train">train and see results</button>
     </div>  
 
-    <button style="width: 240px;" class="btn btn-primary" id="btn-off">stop training</button>
-
-
+    <div style="display: inline;">
+    <button style="width: 240px; display: inline;" class="btn btn-primary" id="btn-off">stop training</button>
+  </div>
+ 
   </div>
 
     
