--- a/website/templates/snakeai.html
+++ b/website/templates/snakeai.html
@@ -59,7 +59,7 @@
           <div style="width: 200px;">
             <h5 class="text-left" id="mint">highscore</h5>
           </div>
-          <h5 id="goal">0/100</h5>
+          <h5 id="goal">40</h5>
         </div>
 
         <br>
