--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -20,13 +20,18 @@
             </div>
             <br>
             <div class="form-group">
-                <input 
-                    type="text" 
-                    class="form-control"
-                    name="grade-level"
-                    id="grade-level"
-                    placeholder="enter grade level"
-                >
+                <select style="width: 400px; height: 38px;" class="form-select" name="grade-level" id="grade-level">
+                    <option value="0">grade</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                  <option value="10">11</option>
+                  <option value="10">12</option>
+                </select>
+
             </div>
             <br>
             <div align="center">
