--- a/website/templates/snakeai.html
+++ b/website/templates/snakeai.html
@@ -65,7 +65,7 @@
         <br>
         <br>
 
-        <div class="row"> 
+        <div style="width: 300px;" class="row"> 
           <h5 id="mint">notice how the AI(snake) behaves differently based off how you trained it...</h5>
         </div>
 
