removed stop btn

--- a/website/templates/snakeai.html
+++ b/website/templates/snakeai.html
@@ -110,14 +110,10 @@
               </h5>
               <br>
 
-              <div class="mr-5" align="left" style="width: 240px; display: inline;">
+              <div align="center" style="width: 240px; display: inline;">
                 <button style="width: 240px;" class="btn btn-primary" id="btn-train">train and see results</button>
               </div>  
-
-
-              <div class="ml-5" align="right" style="display: inline;">
-              <button style="width: 240px; display: inline;" class="btn btn-primary" id="btn-off">stop training</button>
-            </div>
+              
     </div>
 
           </div>
