--- a/website/templates/intro.html
+++ b/website/templates/intro.html
@@ -11,9 +11,9 @@
     </div>
     <br>
     <div class="mx-auto mt-5" style="width: 510px;">
-        <p class="text-center">If you give a chick food when it does a backflip, 
+        <p class="text-center">If you give reward a chicken when it does a backflip, 
             it will do more backlips to get more food. Also,
-            if you electricute a chick (don't do that) when it 
+            if you punisha chicken when it 
             misbehaves, it won't misbehaves as often. Think of
             training your AI like this. This method is called 
             <strong>reinforcment learning</strong>. You will
