fixed mispelling; larger font for intro p

--- a/website/templates/intro.html
+++ b/website/templates/intro.html
@@ -11,10 +11,10 @@
     </div>
     <br>
     <div class="mx-auto mt-5" style="width: 510px;">
-        <p class="text-center">If you give reward a chicken when it does a backflip, 
-            it will do more backlips to get more food. Also,
-            if you punisha chicken when it 
-            misbehaves, it won't misbehaves as often. Think of
+        <p class="text-center" style="font-size: 20px;">If you give reward a chicken when it does a backflip, 
+            it will do more backlips. Also,
+            if you punish a chicken when it 
+            misbehaves, it won't misbehave as often. Think of
             training your AI like this. This method is called 
             <strong>reinforcment learning</strong>. You will
             be training your AI to play the game snake.
