--- a/website/templates/snakeai.html
+++ b/website/templates/snakeai.html
@@ -110,8 +110,12 @@
               <br>
 
               <div align="center" style="width: 240px; display: inline;">
-                <button style="width: 240px;" class="btn btn-primary" id="btn-train">train and see results</button>
+                <button style="width: 240px;" class="btn btn-primary" id="btn-train">train</button>
               </div>  
+
+              <div class="ml-5" align="right" style="display: inline;">
+                <button style="width: 240px; display: inline;" class="btn btn-primary" id="btn-off">stop training</button>
+              </div>
               
     </div>
 
